objects/iahelp__HelpFilter__c.object
<CustomObject>
    <description>Groupings of Help Filter Criteria and associated Rules</description>
    <fields>
        <fullName>iahelp__FilterIdentifier__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>A unique reference with which to tag this Filter</description>
        <inlineHelpText>A unique reference with which to tag this Filter</inlineHelpText>
        <label>Filter Identifier</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>iahelp__FilterLogic__c</fullName>
        <description>Rules governing the grouping of individual Criteria within a Filter</description>
        <inlineHelpText>Rules governing the grouping of individual Criteria within a Filter</inlineHelpText>
        <label>Filter Logic</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iahelp__FilteredObjectIdentifier__c</fullName>
        <description>The identifier (e.g. 3 letter code) of the object that is to be the subject of this Filter</description>
        <inlineHelpText>The identifier (e.g. 3 letter code) of the object that is to be the subject of this Filter</inlineHelpText>
        <label>Filtered Object Identifier</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>iahelp__FilteredObject__c</fullName>
        <description>The API name of the object that is to be the subject of this Filter</description>
        <inlineHelpText>The API name of the object that is to be the subject of this Filter</inlineHelpText>
        <label>Filtered Object</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Help Filter</label>
    <listViews>
        <fullName>iahelp__All</fullName>
        <columns>NAME</columns>
        <columns>iahelp__FilterIdentifier__c</columns>
        <columns>iahelp__FilteredObject__c</columns>
        <columns>iahelp__FilteredObjectIdentifier__c</columns>
        <columns>iahelp__FilterLogic__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Help Filter Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Help Filters</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>